--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(200,200,200);
-    color: rgb(0,0,0);
+    background-color: #ffd466;
+    color: white;
     font-family: "Open Sans", sans-serif;
     text-align: center;
 }
@@ -12,7 +12,11 @@ body {
 }
 
 header {
-	
+  font-size: 5vmin;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 8vmin;
 }
 
 footer {
