--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ body {
     color: white;
     font-family: "Open Sans", sans-serif;
     text-align: center;
+    overflow-y: hidden;
+    width: 100vw;
+    height: 100vh;
 }
 
 #content {
@@ -21,5 +24,5 @@ header {
 
 footer {
 	font-style: italic;
-	font-size: 90%;
+	font-size: 2vmin;
 }
